# swgoh_v2

./: .gitignore  README.md  main.py  pyproject.toml  sync_swgoh.py
swgoh/: main.py  sync_swgoh.py
sync_swgoh/: sync_swgoh.py
