[tool.poetry]
name = "swgoh_v2"
version = "0.1.0"
description = ""
authors = ["Daffy Duck <bycs@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pandas = "^1.1.3"
requests = "^2.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
